[package]
name = "ask433"
version = "0.1.5"
edition = "2024"
authors = ["Annie Ehler <annie.ehler.4@gmail.com>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/annie444/ask433"
description = "A no_std, embedded-hal ASK/OOK modem driver for 433 MHz RF modules (e.g., FS1000A). Supports RX/TX, 4b6b encoding, and software PLL demodulation."
categories = ["embedded", "hardware-support", "no-std"]
documentation = "https://docs.rs/ask433"
keywords = ["hal", "IO"]

[features]
std = ["thiserror/std", "critical-section/std", "log/std"]
delayus-loop = []
timer-isr = ["dep:critical-section"]
defmt-0-3 = [
  "dep:defmt",
  "embedded-hal/defmt-03",
  "heapless/defmt-03",
  "nb/defmt-0-3",
]
log = ["dep:log"]
default = ["timer-isr", "dep:heapless"]

[dependencies]
embedded-hal = "1.0.0"

# defmt feature
defmt = { version = "0.3", optional = true }
# log feature
log = { version = "0.4.27", optional = true, default-features = false }
# timer-isr feature
critical-section = { version = "1.2.0", optional = true }
# no-std feature
heapless = { version = "0.8.0", optional = true }
libm = "0.2.15"
nb = "1.1.0"
thiserror = { version = "2.0.12", default-features = false }

[dev-dependencies]
embedded-hal-mock = { version = "0.11.1", features = ["eh1"] }
ask433 = { path = ".", features = ["std"] }
critical-section = { version = "1.2.0", features = ["restore-state-bool"] }
