[package]
name = "ask433"
version = "0.2.0"
edition = "2024"
authors = ["Annie Ehler <annie.ehler.4@gmail.com>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/annie444/ask433"
description = "A no_std, embedded-hal ASK/OOK modem driver for 433 MHz RF modules (e.g., FS1000A). Supports RX/TX, 4b6b encoding, and software PLL demodulation."
categories = ["embedded", "hardware-support", "no-std"]
documentation = "https://docs.rs/ask433"
keywords = ["hal", "IO"]

[package.metadata.docs.rs]
rustc-args = ["--features", "delay-loop,timer-isr"]

[features]
std = ["critical-section/std"]
delay-loop = []
timer-isr = ["dep:critical-section"]
defmt-0-3 = ["embedded-hal/defmt-03", "heapless/defmt-03", "nb/defmt-0-3"]
default = ["timer-isr"]

[dependencies]
embedded-hal = "1.0.0"
# timer-isr feature
critical-section = { version = "1.2.0", optional = true }
# no-std feature
heapless = { version = "0.8.0" }
libm = "0.2.15"
nb = "1.1.0"

[dev-dependencies]
embedded-hal-mock = { version = "0.11.1", features = ["eh1"] }
critical-section = { version = "1.2.0", features = [
  "std",
  "restore-state-bool",
] }
